test/pos/null.scala
module M {
  val x: Boolean = null == null;
}